Bug 465527 - Video playback fails silently when video is over Matrix server's size limit
Summary: Video playback fails silently when video is over Matrix server's size limit
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-10 00:21 UTC by Justin Zobel
Modified: 2023-02-20 17:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2023-02-10 00:21:46 UTC
I ran neochat in konsole and it shows the video URL so I clicked it and it returns this JSON:
errcode	"M_TOO_LARGE"
error	"Requested file is too large > 52428800 bytes"

So it's an issue with my Matrix server. It would be great if Neochat could display an error for this like "File size too large. Contact your Matrix server admin for assistance" or something.

This 50MB size limit is the default of the Matrix Synapse server.
Comment 1 Bug Janitor Service 2023-02-15 21:24:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/799
Comment 2 Tobias Fella 2023-02-20 17:40:07 UTC
Git commit 6d9dca7da83f2a139ed2a38eb93034123e588923 by Tobias Fella.
Committed on 20/02/2023 at 17:19.
Pushed by tfella into branch 'master'.

Show a warning when a file is too large to download

M  +6    -0    src/controller.cpp

https://invent.kde.org/network/neochat/commit/6d9dca7da83f2a139ed2a38eb93034123e588923