Show a warning when a file is too large to download

BUG: 465527